focus prompt input first, fix prompt input overflow

--- a/src/assets/styles/pages/_chat-interface.scss
+++ b/src/assets/styles/pages/_chat-interface.scss
@@ -459,6 +459,10 @@
         outline: none;
       }
     }
+
+    .input-wrapper {
+      overflow: auto;
+    }
   }
 
   .actions {
